[package]
name = "ado"
version = "0.0.0"
edition = "2021"
license = "UNLICENSED"
authors = ["Toby Smith"]
description = "Open browser tabs to Azure Devops board items, PRs, and repositories"
repository = "https://github.com/tobysmith568/ado-cli"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
azure_devops_rust_api = { version = "0.7.2", features = ["git"]}
clap = { version = "4.1.1", features = ["derive"] }
dialoguer = "0.10.3"
dirs = "4.0.0"
futures = "0.3.25"
ini = "1.3.0"
lazy_static = "1.4.0"
open = "3.2.0"
regex = "1.7.1"
tokio = { version = "1.24.1", features = ["full"] }
url = "2.3.1"
urlencoding = "2.1.2"
