[package]
name = "ado"
version = "0.0.0"
edition = "2021"
license = "UNLICENSED"
authors = ["Toby Smith"]
description = "Open browser tabs to Azure Devops board items, PRs, and repositories"
repository = "https://github.com/tobysmith568/ado-cli"

[dependencies]
azure_devops_rust_api = { version = "0.13.0", features = ["git"]}
clap = { version = "4.3.0", features = ["derive"] }
dialoguer = "0.11.0"
dirs = "5.0.0"
futures = "0.3.25"
lazy_static = "1.4.0"
open = "5.0.0"
regex = "1.9.0"
rust-ini = "0.19.0"
tokio = { version = "1.26.0", features = ["full"] }
url = "2.4.0"
urlencoding = "2.1.2"
